JavaFX already has added and tested GraphicsApp class. Method didnt work